Fixed parallax overlap error

--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -45,7 +45,7 @@ h2{
         padding-bottom: 10em;
     } 
     .zone {
-        padding-bottom: 2em;
+        padding-bottom: 1em;
     }
     #about {
         clip-path: polygon(0 0,100% 0,100% 90%,0 100%)
