--- a/src/Styles/Contacts.scss
+++ b/src/Styles/Contacts.scss
@@ -8,7 +8,14 @@
     text-align: left;
     display: flex;
     flex-direction: column;   
+    margin-top: 40rem;
 }
+
+@media only screen and (max-width: 900px) {
+    #contacts{
+        margin-top: 50rem;
+    }
+  }
 
 .icon {
     border-radius: 50px;
