--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -114,4 +114,7 @@ h2{
     .li{
         padding-inline-end: 1em;
     }
+    #projects{
+        padding-bottom: 10rem;
+    }
   }
